Changes to config file

--- a/_config.yml
+++ b/_config.yml
@@ -7,28 +7,28 @@ ios_app_country                           : us                                  
 
 appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
-presskit_download_link                    : https://emilbaehr.com                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file).
+presskit_download_link                    : https://t.me/LicensePlateCheckBot                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file).
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Write a short tagline for your app.
+app_description                           : test
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
 
 
 # Information About Yourself
-your_name                                 : Emil Baehr
-your_link                                 : https://emilbaehr.com
-your_city                                 : Copenhagen
-email_address                             : emil.baehr@gmail.com
-facebook_username                         :
-instagram_username                        : ebaehr
-twitter_username                          : ebaehr
-github_username                           : emilbaehr
-youtube_username                          :
+your_name                                 : Taras Kloba
+your_link                                 : https://klioba.com
+your_city                                 : Lviv, Ukraine
+email_address                             : bdiwy@klioba.com
+facebook_username                         : taras.kloba
+instagram_username                        : taras.kloba
+twitter_username                          : klioba
+github_username                           : kloba
+youtube_username                          : SQLua
 
 
 
