--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ presskit_download_link                    : https://t.me/LicensePlateCheckBot   
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : LicensePlateCheckBot - бот для перевірки транспортних засобів                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : За допомогою цього бота ви можете перевірити транспортний засіб по сервісній базі МВС, списках диверсантів та викрадених авто. Працівники правоохоронних органів після перевірки можуть отримати доступ до сповіщень із камер, встановлених на блокпостах (розпізнавання номерних знаків та миттєва перевірка по базах правоохоронних органів відбувається в режимі реального часу).
+app_description                           : За допомогою цього бота ви можете перевірити транспортний засіб по сервісній базі МВС, списках диверсантів та викрадених авто. 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
 
