--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 #page title
-page_title                                : LicensePlateCheckBot                                        # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title                                : LicensePlateCheckBot - бот для перевірки авто  # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
 ios_app_id                                :                                          # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
-ios_app_country                           : us                                        # Required outside USA. Enter 2 letter country code as in https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
+ios_app_country                           :                                         # Required outside USA. Enter 2 letter country code as in https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
 
 appstore_link                             : https://t.me/LicensePlateCheckBot                                          # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
-presskit_download_link                    : https://t.me/LicensePlateCheckBot                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file).
+presskit_download_link                    :                                           # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file).
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
-app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : LicensePlateCheckBot - бот для перевірки транспортних засобів                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : За допомогою цього бота ви можете перевірити транспортний засіб по сервісній базі МВС, списках диверсантів та викрадених авто. 
+app_price                                 : free                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_description                           : За допомогою цього бота ви можете перевірити транспортний засіб по сервісній базі МВС, списках диверсантів та викрадених авто.
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
 
