--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #page title
-page_title                                : LicensePlateCheckBot                      # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title                                : LicensePlateCheckBot - бот для перевірки транспортних засобів                       # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
 ios_app_id                                :                                           # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
@@ -11,7 +11,7 @@ presskit_download_link                    :                                     
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : assets/appicon.png                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  : LicensePlateCheckBot - бот для перевірки транспортних засобів                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name                                  : LicensePlateCheckBot                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : За допомогою цього бота ви можете перевірити транспортний засіб по сервісній базі МВС, списках диверсантів та викрадених авто.
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
@@ -19,7 +19,7 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : SoftServe Inc.
+your_name                                 : SoftServe Inc. (AI & Big Data CoEs)
 your_link                                 : https://softserveinc.com
 your_city                                 : Ukraine
 email_address                             : bdiwy@klioba.com
