Manage pages in menu

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : SoftServe Inc. (AI & Big Data CoEs)
+your_name                                 : SoftServe Inc. (AI & Big Data CoE)
 your_link                                 : https://softserveinc.com
 your_city                                 : Ukraine
 email_address                             : bdiwy@klioba.com
