--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ presskit_download_link                    :                                     
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : assets/appicon.png                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  : @LicensePlateCheckBot                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name                                  : "@LicensePlateCheckBot"                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : За допомогою цього сервісу ви можете перевірити транспортний засіб по сервісній базі МВС, списках диверсантів та викрадених авто.
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
