--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ app_icon                                  : assets/appicon.png                  
 app_name                                  : "@LicensePlateCheckBot"                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : За допомогою цього сервісу ви можете перевірити транспортний засіб по сервісній базі МВС, списках диверсантів та викрадених авто.
-enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
+enable_smart_app_banner                   : false                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
 
 
