Translation for Made by

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ enable_smart_app_banner                   : false                               
 # Information About Yourself
 your_name                                 : SoftServe Inc. (AI & Big Data CoE)
 your_link                                 : https://softserveinc.com
-your_city                                 : Ukraine
+your_city                                 : # Ukraine
 email_address                             : bdiwy@klioba.com
 facebook_username                         : # taras.kloba
 instagram_username                        : # taras.kloba
