--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ presskit_download_link                    :                                     
 app_icon                                  : assets/appicon.png                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : "@LicensePlateCheckBot"                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : "За допомогою цього боту ви можете <b>перевірити</b> транспортний засіб по сервісній <b>базі МВС, списках диверсантів та викрадених авто</b>. <br /><br /> Також наша система дозволяє автоматично розпізнавати номерні знаки із камер на <b>блок-постах</b> та <b>надсилати сповіщення</b> до працівників правоохоронних органів."
+app_description                           : "За допомогою цього бота ви можете <b>перевірити</b> транспортний засіб по сервісній <b>базі МВС, списках диверсантів та викрадених авто</b>. <br /><br /> Також наша система дозволяє автоматично розпізнавати номерні знаки із камер на <b>блок-постах</b> та <b>надсилати сповіщення</b> до працівників правоохоронних органів."
 enable_smart_app_banner                   : false                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
 
