Fix issue with semicolon

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ youtube_username                          : SQLua
 features                                  :
 
   - title                                 : Перевірка по сервісній базі МВС
-    description                           : Із цієї бази можна отримати всю інформацію із процедури реєстрації автомобіля: VIN, модель, марку ТЗ, рік реєстрації, вагу, колір і т.д.
+    description                           : "Із цієї бази можна отримати всю інформацію із процедури реєстрації автомобіля: VIN, модель, марку ТЗ, рік реєстрації, вагу, колір і т.д."
     fontawesome_icon_name                 : magic
 
   - title                                 : Перевірка по списках викрадених
