--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ features                                  :
 
   - title                                 : Перевірка по списках дисерсантів
     description                           : Списки формують на основі офіційних даних від правоохоронних органів
+    fontawesome_icon_name                 : check
 
   - title                                 : Автоматичне розпізнавання номерних знаків
     description                           : Наша система дозволяю за декілька мілісекунд розпізнати номерний знак і провірити його по наших доступних базах даних
