Grammar mistakes fixes

--- a/_config.yml
+++ b/_config.yml
@@ -39,23 +39,23 @@ features                                  :
     fontawesome_icon_name                 : magic
 
   - title                                 : Перевірка по списках викрадених
-    description                           : Ми працюємо із офіційними списками викрадених трансортних засобів МВС, це одна із найнебезпечніших груп
+    description                           : Ми працюємо з офіційними списками викрадених транспортних засобів МВС, це одна із найнебезпечніших груп
     fontawesome_icon_name                 : mobile
 
-  - title                                 : Перевірка по списках дисерсантів
+  - title                                 : Перевірка по списках диверсантів
     description                           : Списки формують на основі офіційних даних від правоохоронних органів
     fontawesome_icon_name                 : check
 
   - title                                 : Автоматичне розпізнавання номерних знаків
-    description                           : Наша система дозволяю за декілька мілісекунд розпізнати номерний знак і провірити його по наших доступних базах даних
+    description                           : Наша система дозволяю за декілька мілісекунд розпізнати номерний знак і перевірити його по наших доступних базах даних
     fontawesome_icon_name                 : sync
 
-  - title                                 : Підключення і опрацювання відео стрімів
+  - title                                 : Підключення й опрацювання відеопотоків
     description                           : Основна ціль проекту допомогти працівникам блок-постів оперативно отримувати повну інформацію із офіційних джерел по трансортних засобів у режиі реального часу
     fontawesome_icon_name                 : adjust
 
-  - title                                 : Співставлення кольору авто та марки із даними реєстрації
-    description                           : Наші моделі машиного навчання також розпізнають моделі, тип транспортних засобів та їхній колір. При співставлені цієї інформації із даними із сервісної бази МВС, можна ідентифікувати авто, які замінили номерний знак.
+  - title                                 : Зіставлення кольору авто та марки із даними реєстрації
+    description                           : Наші моделі машинного навчання також розпізнають моделі, тип транспортних засобів та їхній колір. Порівнюючи цю інформацію із даними із сервісної бази МВС, можна ідентифікувати авто, які замінили номерний знак чи вимагають додаткової перевірки.
     fontawesome_icon_name                 : star
 
   - title                                 : Сповіщення по рівнях ризикованості
