--- a/_config.yml
+++ b/_config.yml
@@ -34,31 +34,31 @@ youtube_username                          : SQLua
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 : Перевірка по сервісній базі МВС
+  - title                                 : Перевірка даних або Ідентифікація авто по базі МВС
     description                           : "Із цієї бази можна отримати всю інформацію із процедури реєстрації автомобіля: VIN, модель, марку ТЗ, рік реєстрації, вагу, колір і т.д."
     fontawesome_icon_name                 : magic
 
-  - title                                 : Перевірка по списках викрадених
-    description                           : Ми працюємо з офіційними списками викрадених транспортних засобів МВС, це одна із найнебезпечніших груп
+  - title                                 : Перевірка даних по базі викрадених авто МВС
+    description                           : "Перевірка транспортного засобу у розшукових обліках Міністерства внутрішніх справ України у зв’язку з їх викраденням. Пошук здійснюється за номером державного реєстраційного знаку або VIN номером (номером кузова) транспортного засобу."
     fontawesome_icon_name                 : mobile
 
-  - title                                 : Перевірка по списках диверсантів
-    description                           : Списки формують на основі офіційних даних від правоохоронних органів
+  - title                                 : Перевірка ТЗ по базі диверсантів МВС
+    description                           : Офіційний та актуальний список який формують Державні Правоохоронні Органи.
     fontawesome_icon_name                 : check
 
   - title                                 : Автоматичне розпізнавання номерних знаків
-    description                           : Наша система дозволяю за декілька мілісекунд розпізнати номерний знак і перевірити його по наших доступних базах даних
+    description                           : Наша система миттєво ідентифікує авто, його номерний знак та звіряє зі всіма доступними базами даних на наявність небезпеки.
     fontawesome_icon_name                 : sync
 
   - title                                 : Підключення й опрацювання відеопотоків
     description                           : Основна ціль проекту допомогти працівникам блок-постів оперативно отримувати повну інформацію із офіційних джерел по трансортних засобів у режиі реального часу
     fontawesome_icon_name                 : adjust
 
-  - title                                 : Зіставлення кольору авто та марки із даними реєстрації
+  - title                                 : Виявлення розбіжностей з реєстраційними даними ТЗ
     description                           : Наші моделі машинного навчання також розпізнають моделі, тип транспортних засобів та їхній колір. Порівнюючи цю інформацію із даними із сервісної бази МВС, можна ідентифікувати авто, які замінили номерний знак чи вимагають додаткової перевірки.
     fontawesome_icon_name                 : star
 
-  - title                                 : Сповіщення по рівнях ризикованості
+  - title                                 : Система оповіщень при виявлені загрози
     description                           : Наша система має гнучку систему налаштування сповіщень, і можна отримувати інформацію лише у разі виявлення підозрілих авто.
     fontawesome_icon_name                 : arrow-alt-circle-down
 
@@ -66,7 +66,7 @@ features                                  :
     description                           : Працівники правоороних органів також отримують зручний інструмент для перевірки останнього місце знаходження авто, яке первіряється на основі даних із інших блокпостів
     fontawesome_icon_name                 : link
 
-  - title                                 : Можливість сповіщення підозрілих авто
+  - title                                 : Швидке розповсюдження інформації
     description                           : Усі працівники блок-постів мають додатковий функціонал, який можна повідомити працівників навколишніх блокпостів про підозріле авто.
     fontawesome_icon_name                 : info-circle
 
